# idm-generative-system

./: .dockerignore  .dropboxignore  .env.example  .env.shared  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  END_USER_MANUAL.md  IDM_SYSTEM_ARCHITECTURE_V1.excalidraw  LICENCE.md  README.md  README_v2.md  acid_dsp_model.py  acid_engine_v2.py  acid_granular_experiment.py  dvc.yaml  environment.yml  params.yaml  pyproject.toml  requirements.txt  sample_maker.ipynb
.claude/: settings.json
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  e2e.yml
.obsidian/: graph.json  workspace.json
06-MLOps/runbook_helpers/: preflight_dvc_repro.sh
api/: __init__.py  main.py
data/synthetic/: validation_report.json
docs/: THE_MASTER_DATASET_SPECIFICATION.md
engine/: AcidSynthEngine.cpp  __init__.py  generator.py  sample_maker.py
engine/codegen/: __init__.py  base.py  mappings.py  synthdef.py  tidal.py
engine/effects/: __init__.py  base.py  bitcrusher.py  chain.py  compressor.py  delay.py  filter.py  glitch.py  noise_floor.py  reverb.py  saturation.py  spatial.py  vinyl.py
engine/ml/: README.md  __init__.py  dataset_generator.py  dataset_schema.py  deterministic_mapper.py  gaussian_noise.py  model_training.py  regional_profiles.py  resonance_rules.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: advisor.spec.ts  codegen.spec.ts  composer.spec.ts  effects.spec.ts  error-states.spec.ts  fixtures.ts  generator.spec.ts  guides.spec.ts  navigation.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  codegen.ts  tuning.ts
frontend/src/components/advisor/: AdvisorPanel.tsx
frontend/src/components/codegen/: CodeBlock.tsx  CodegenPanel.tsx  CodegenPopout.tsx  index.ts  useBroadcastChannel.ts
frontend/src/components/composer/: ComposerPanel.tsx
frontend/src/components/effects/: EffectsExplorer.tsx
frontend/src/components/generator/: GeneratorPanel.tsx
frontend/src/components/guide/: EP133Guide.tsx  PO33Guide.tsx
frontend/src/components/layout/: AppShell.tsx  NavBar.tsx  StatusBar.tsx
frontend/src/components/shared/: SourceTags.tsx
frontend/src/components/tuning/: TuningExtract.tsx  TuningForm.tsx  TuningPanel.tsx  TuningResult.tsx  index.ts  regionProfiles.ts
frontend/src/hooks/: useEP133Sequencer.ts  useSequencer.ts
frontend/src/tests/: setup.ts
frontend/src/tests/codegen/: codegen.test.tsx
frontend/src/tests/hooks/: useEP133Sequencer.test.ts  useSequencer.test.ts
frontend/src/types/: codegen.ts  index.ts  tuning.ts
knowledge/: __init__.py  qdrant_client.py  rag.py
models/: .gitignore  feature_importance.json  metrics.json
notebooks/: README.md  idm_project_01.ipynb
scripts/: generate_dataset.py  preflight_dvc_repro.sh  run-with-env.sh  train_model.py  train_with_hash.sh  validate_schema.py
secrets/: app.enc.yaml
streamlit_app/: app.py
tests/: test_api.py  test_codegen.py  test_codegen_api.py  test_dataset_generator.py  test_dataset_schema.py  test_deterministic_mapper.py  test_effects.py  test_gaussian_noise.py  test_infra_smoke.py  test_model_training.py  test_rag.py  test_regional_profiles.py  test_resonance_rules.py  test_sample_maker.py  test_tuning_api.py  test_tuning_extract.py
