# IDM Generative System — Project Configuration
# Single source of truth for metadata, dependencies, and tool configs.
# Replaces requirements.txt (kept for Streamlit Cloud) and environment.yml (kept for conda).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "idm-generative-system"
version = "0.6.1"
description = "Generative audio engine for experimental IDM production — DSP modeling, algorithmic composition, and RAG-augmented sound design."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Tom Boro", email = "tom@coloursinvision.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

# Core runtime dependencies — the minimum set to run the FastAPI backend + engine.
dependencies = [
    # DSP / Audio
    "numpy>=1.26.0,<2.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numba>=0.59.0",

    # Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",

    # Resilience
    "tenacity>=8.2.0",

    # Vector DB
    "qdrant-client>=1.8.0",

    # LLM
    "openai>=1.0.0",

    # Data (engine/generator.py — pattern DataFrames)
    "pandas>=2.0.0",
    # Knowledge layer (engine/ml — profile spoke parsing)
    "python-frontmatter>=1.1.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
# Development toolchain
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "numpy>=1.26.0",            # mypy stub support
]

# ML pipeline (V2)
ml = [
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "mlflow>=2.12.0",
    "pandas>=2.0.0",
    "dvc[s3]>=3.0.0",
    "pandera>=0.19.0",
    "optuna>=3.6.0",
    "boto3>=1.34.0",
]

# LLM observability (V2)
monitoring = [
    "langfuse>=2.0.0",
]

# Streamlit auxiliary UI — NOT included in Docker image
streamlit = [
    "streamlit>=1.32.0",
]

[project.urls]
Repository = "https://github.com/coloursinvision/idm-generative-system"

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["engine", "api", "knowledge"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8 + black + isort)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["engine", "api", "knowledge", "tests"]
extend-exclude = [
    "notebooks/",
    "engine/acid_dsp_model.py",
    "engine/acid_engine_v2.py",
    "engine/acid_granular_experiment.py",
    "engine/AcidSynthEngine.cpp",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "RET",    # flake8-return
]
ignore = [
    "S101",    # assert used in tests — intentional
    "B008",    # function call in default arg — FastAPI Depends() pattern
    "RET504",  # unnecessary assignment before return — readability preference
    "E501",    # line too long — handled by formatter
    "E402",    # module-level import not at top — load_dotenv() must run before imports
    "RUF001",  # ambiguous unicode in strings — en-dashes in domain text intentional
    "RUF002",  # ambiguous unicode in docstrings — parameter ranges use en-dash
    "RUF003",  # ambiguous unicode in comments — intentional
    "RUF012",  # mutable class var — frozen sets on effect classes are intentional constants
    "RUF022",  # unsorted __all__ — grouped by logical category, not alphabetical
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert in tests
    "S311",   # pseudo-random in tests
    "N803",   # EffectClass, MockKB etc. — test parametrize convention
    "N806",   # X, X_train, X_test — scikit-learn naming convention
]
"engine/effects/*.py" = [
    "N803",   # DSP convention (Q, N, etc.)
    "N806",   # DSP convention
]
"knowledge/qdrant_client.py" = [
    "T201",   # print() in CLI __main__ block — intentional
    "S324",   # MD5 for content hashing — not security (CR-15 pending)
]
"streamlit_app/**/*.py" = [
    "E402",   # import order — _bridge_secrets() must run before imports
]

[tool.ruff.lint.isort]
known-first-party = ["engine", "api", "knowledge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "engine/acid_dsp_model\\.py$",
    "engine/acid_engine_v2\\.py$",
    "engine/acid_granular_experiment\\.py$",
    "notebooks/",
]

# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "numba",
    "scipy.*",
    "qdrant_client",
    "qdrant_client.*",
    "soundfile",
    "pandas",
    "matplotlib",
    "matplotlib.*",
    "sklearn.*",
    "xgboost",
    "optuna",
    "optuna.*",
    "mlflow",
    "mlflow.*",
    "pandera",
    "pandera.*",
]
ignore_missing_imports = true

# Engine modules: relax strict checks for DSP code with heavy numpy usage.
# Goal: incrementally remove these overrides as type annotations improve.
[[tool.mypy.overrides]]
module = [
    "engine.effects.*",
    "engine.sample_maker",
    "engine.generator",
    "api.main",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["type-arg", "misc"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires external services (Qdrant, OpenAI)",
]
filterwarnings = [
    "ignore::DeprecationWarning:qdrant_client.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["engine", "api", "knowledge"]
omit = ["tests/*", "streamlit_app/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
